# SmallStoreAI

./: additional_fix_script.py  app.py  app.py.bak  comprehensive_fix.py  comprehensive_fix_all.py  final_fix_script.py  fix_bracket_errors.py  fix_double_braces.py  fix_dynamic_pricing.py  fix_f_strings.py  fix_fstring_escapes.py  fix_indentation.py  fix_integration_kit.py  fix_integration_kit_comprehensive.py  fix_integration_kit_method.py  fix_integration_section.py  fix_line.py  fix_loyalty_program.py  fix_loyalty_program_all.py  fix_more_lines.py  fix_more_lines2.py  fix_partnerships.py  fix_partnerships_comprehensive.py  fix_perishable_inventory.py  fix_promotions.py  fix_realtime_dashboard.py  fix_realtime_dashboard2.py  fix_realtime_dashboard_comprehensive.py  fix_remaining_f_strings.py  fix_rerun.py  fix_sprintf_errors.py  fix_status_structure.py  fix_waste_management_duplicates.py  fix_waste_management_indentation.py  fix_waste_management_lite.py  fix_wm_lite.py  fixed_integration_section.txt  generate_report.py  implement_testing_framework.py  improve_exception_handling.py  (+8 more)
.streamlit/: config.toml
app/: __init__.py  utils.py
attached_assets/: Pasted-IndentationError-File-home-runner-workspace-pages-dynamic-pricing-assistant-py-line-202-st-writ-1743730375872.txt  Pasted-Section-2-Daily-Compliance-Operations-Prompt-You-are-an-advanced-AI-agent-tasked-with-building-t-1743748208515.txt  Pasted-Section-3-Feature-2-Low-Cost-Local-Sourcing-Connector-Description-Connects-to-suppliers-farmers-1743726168662.txt  (+3 more)
data/: .gitkeep  compliance_daily_ops.json  events.json  (+21 more)
(+98 files in other folders)
