[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "sendgrid>=6.11.0",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
    "twilio>=9.5.1",
]
